@@ -1,7 +1,7 @@
 ## Generators
 
 ```elixir 
-OEIS.Util.generate_function_sequences(~w(A046758), in_module: Chunky.Sequence.OEIS.Factors)
+OEIS.Util.generate_function_sequences(~w(A138591), in_module: Chunky.Sequence.OEIS.Multiples)
 OEIS.Util.generate_list_sequences(, in_module: Chunky.Sequence.OEIS.Factors)
 ```
 
@@ -12,7 +12,6 @@ OEIS.Util.generate_list_sequences(, in_module: Chunky.Sequence.OEIS.Factors)
 ## Core
 
 
-A005588 A005811 A006894 A008279
 
 A001462
 A002083
@@ -21,8 +20,11 @@ A004011
 
 ## Powers
 
+A057716
+
 
 ## Multiples
+
 
 
 ## Divisors
